--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <a href="#">PortFolio</a>
         <em>UX/UI DESIGNER</em>
       </div>
-      <nav class="header_nav" role="navigation" aria-label="메인메뉴" aria-controls="primary-menu"
-      aria-expanded="false">
+      <nav class="header_nav" role="navigation" aria-label="메인메뉴" aria-controls="primary-menu" aria-expanded="false">
         <ul>
           <li><a href="#Intro">Intro</a></li>
           <li><a href="#Project">Project</a></li>
@@ -32,7 +31,7 @@
     </div>
   </header>
   <main id="main" role="main">
-    <section id="intro">
+    <section id="Intro">
       <div class="intro_inner">
         <h1 class="intro_title">UX/UI DESIGNER</h1>
         <div class="intro_text">
@@ -57,7 +56,7 @@
 
 
     </section>
-    <section id="project">
+    <section id="Project">
       <div class="pf_inner">
         <h2 class="pf_title">
           project
@@ -150,7 +149,7 @@
         </div>
       </div>
     </section>
-    <section id="work">
+    <section id="Work">
       <div class="work_inner">
         <h2 class="work_title">
           publishing
@@ -231,8 +230,152 @@
         </div>
       </div>
     </section>
-    <section id="graphics"></section>
-    <section id="about"></section>
+    <section id="Graphics">
+      <div class="graphics_inner">
+        <h2 class="graph_title">
+          graphics<em>작업물</em>
+        </h2>
+        <div class="graphics_wrap">
+          <article class="stage1">
+            <div class="inner">
+              <div class="img_box">
+                <img src="./src/img/graphic1.jpg" alt="">
+              </div>
+              <div class="img_text">
+                <h3>봄 여행 포스터</h3>
+                <p>캐리어 추천 아이템</p>
+              </div>
+            </div>
+          </article>
+          <article class="stage2">
+            <div class="inner">
+              <ul>
+                <li>
+                  <p class="img_box">
+                    <img src="./src/img/graphic2.jpg" alt="">
+                  </p>
+                </li>
+                <li>
+                  <p class="img_box">
+                    <img src="./src/img/graphic3.jpg" alt="">
+                  </p>
+                </li>
+                <li>
+                  <p class="img_box">
+                    <img src="./src/img/graphic4.jpg" alt="">
+                  </p>
+                </li>
+              </ul>
+              <div class="img_text">
+                <p class="title1">사용자 요구에 맞는 최적의 UI 디자인을 찾아줍니다.</p>
+                <p class="title2">'가나다라마바사아자차카타파하'</p>
+              </div>
+              <ul class="size">
+                <li>
+                  <div class="img_box"><img src="./src/img/graphic3.jpg" alt=""></div>
+                </li>
+                <li>
+                  <div class="img_box"><img src="./src/img/graphic5.jpg" alt=""></div>
+                </li>
+              </ul>
+              <div class="img_text size">
+                <p class="title1">여행</p>
+                <p class="title2">여행 도시 추천이 한 눈에 보입니다.</p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+
+    </section>
+    <section id="About">
+      <div class="about_inner">
+        <h2 class="about_title">About Me
+          <em>나의 도전</em>
+        </h2>
+        <div class="about_desc">
+          <div class="time_line">
+            <span>2024.04.23</span>
+            <h3>목표를 이루다.</h3>
+            <p>안녕하세요 저는 도전적인 웹디자이너 김가현입니다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.04.23</span>
+            <h3>목표를 이루다.</h3>
+            <p>안녕하세요 저는 도전적인 웹디자이너 김가현입니다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.04.23</span>
+            <h3>목표를 이루다.</h3>
+            <p>안녕하세요 저는 도전적인 웹디자이너 김가현입니다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.04.23</span>
+            <h3>목표를 이루다.</h3>
+            <p>안녕하세요 저는 도전적인 웹디자이너 김가현입니다.</p>
+          </div>
+          <div class="time_line">
+            <span>2024.04.23</span>
+            <h3>목표를 이루다.</h3>
+            <p>안녕하세요 저는 도전적인 웹디자이너 김가현입니다.</p>
+          </div>
+        </div>
+      </div>
+      <div class="i_am">
+        <ul class="flow_list">
+          <li>
+            <div class="splide ltl" id="splide1">
+              <div class="splide__track splide__track-1">
+                <ul class="splide__list">
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">ME</li>
+                  <li class="splide__slide"><img src="./src/img/arrow.png" alt=""></li>
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">ME</li>
+                  <li class="splide__slide"><img src="./src/img/arrow.png" alt=""></li>
+                  <li class="splide__slide">About</li>
+                  <li class="splide__slide">ME</li>
+                  <li class="splide__slide"><img src="./src/img/arrow.png" alt=""></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="splide rtl" id="splide2">
+              <div class="splide__track splide__track-2">
+                <ul class="splide__list">
+                  <li class="splide__slide"><img src="./src/img/about1.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about2.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about3.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about4.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about5.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about6.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about7.jpg" alt=""></li>
+                  <li class="splide__slide"><img src="./src/img/about8.jpg" alt=""></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="splide ltl" id="splide3">
+              <div class="splide__track splide__track-3">
+                  <ul class="splide__list">
+                    <li class="splide__slide">MY</li>
+                    <li class="splide__slide">PORT</li>
+                    <li class="splide__slide"><img src="./src/img/cloud.png" alt=""></li>
+                    <li class="splide__slide">MY</li>
+                    <li class="splide__slide">CLOUD</li>
+                    <li class="splide__slide"><img src="./src/img/cloud.png" alt=""></li>
+                    <li class="splide__slide">MY</li>
+                    <li class="splide__slide">SITE</li>
+                    <li class="splide__slide"><img src="./src/img/cloud.png" alt=""></li>
+                </ul>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
 
   </main>
   <script type="module" src="./src/js/main.js"></script>
