--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
     </main>
     <script type="module" src="./src/js/main.js"></script>
-    <script src="./src/js/jquery-3.7.1min.js"></script>
+    <script type="module" src="./src/js/jquery-3.7.1min.js"></script>
 
 </body>
 
