--- a/index.html
+++ b/index.html
@@ -30,20 +30,34 @@
     </header>
     <main>
         <section id="Home" class="item" data-bgColor="#3E84A8">
-            <div class="icon icon">
-                <img src="./src/imgs/icon1.png">
+            <div class="symbol_flow">
+                <div class="symbol icon">
+                    <img src="./src/imgs/icon1.png">
+                </div>
+                <div class="symbol_text">
+                 <p>Welcome To My Port</p>
+                </div>
             </div>
-            <ul class="flex">
-                <li><img src="./src/imgs/clouddd.png"></li>
-                <li><img src="./src/imgs/clouddd.png"></li>
-                <li><img src="./src/imgs/clouddd.png"></li>
-                <li class="etc"><img src="./src/imgs/clouddd.png"></li>
-                <li class="etc"><img src="./src/imgs/clouddd.png"></li>
-                <li class="etc"><img src="./src/imgs/clouddd.png"></li>
-                <li class="etc"><img src="./src/imgs/clouddd.png"></li>
-                <li><img src="./src/imgs/clouddd.png"></li>
-                <li><img src="./src/imgs/clouddd.png"></li>
+            <div class="i_am">
+            <ul>
+                <li class="flow_list">
+                <div class="splide" id="splide1">
+                    <div class="splide__track splide__track-1">
+                        <ul class="splide__list">
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                            <li class="splide__slide"><img src="./src/imgs/clouddd.png"></li>
+                        </ul>
+                    </div>
+                </div>
+            </li>
             </ul>
+            </div>
         </section>
         <section id="Project" class="item" data-bgColor="#28527A">
             <div class="pj_inner">
@@ -267,7 +281,6 @@
 
     </main>
     <script type="module" src="./src/js/main.js"></script>
-    <script type="module" src="./src/js/jquery-3.7.1min.js"></script>
 
 </body>
 
