--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MY PORT</title>
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css" />
 
 </head>
 
 <body>
-    <div class="preloader-c-area">
+    <!-- <div class="preloader-c-area">
         <div class="preloader-c c-1"></div>
         <div class="preloader-c c-2"></div>
         <div class="preloader-c c-3"></div>
         <div class="preloader-c c-4"></div>
-    </div>
+    </div> -->
     <header id="header" role="banner">
         <div class="header_inner">
-            <div class="header_logo"><a href="#">My Port</a></div>
+            <div class="header_logo"><a href="#"><img src="./src/imgs/mylogo.png">MY Port</a></div>
             <nav class="header_nav" role="navigation" aria-label="메인메뉴" aria-controls="primary-menu"
                 aria-expanded="false">
                 <ul>
@@ -38,16 +39,35 @@
     <main>
         <section id="Home" class="item">
             <div class="home-wrap">
-                <div class="home-img img1"><img src="./src/imgs/mainline.png"></div>
-                <div class="home-img img2"><img src="./src/imgs/cloud1.png"></div>
-                <div class="home-img img3"><img src="./src/imgs/cloud2.png"></div>
-                <div class="home-img img4"><img src="./src/imgs/roundsticker.png"></div>
+                <div class="backimg bi1" data-depth="0.18"><img src="./src/imgs/Bg-pattern.png"></div>
+                <div class="backimg bi2" data-depth="0.17"><img src="./src/imgs/Bg-pattern2.png"></div>
+                <div class="items__inner home-inner" id="js-scene">
+                    <div class="items__layer layer" data-depth="0.16">
+                        <div class="items__item img1"><img src="./src/imgs/mainline.png"></div>
+                    </div>
+                    <div class="items__layer layer" data-depth="0.18">
+                        <div class="items__item img2"><img src="./src/imgs/combine1.png"></div>
+                    </div>
+                    <div class="items__layer layer" data-depth="0.60">
+                        <div class="items__item img3"><img src="./src/imgs/roundsticker.png"></div>
+                    </div>
+                    <div class="items__layer layer" data-depth="0.22">
+                        <div class="items__item img4"><img src="./src/imgs/cloud1.png"></div>
+                    </div>
+                    <div class="items__layer layer" data-depth="0.24">
+                        <div class="items__item img5"><img src="./src/imgs/combine2.png"></div>
+                    </div>
+                    
+                </div>
+                <div class="line">
+                    <h1 class="typing">welcome to my port</h1>
+                </div>
             </div>
 
         </section>
         <section id="Project" class="item">
             <div class="pj_inner">
-                <h2 class="pj_title">The<br/> project:</h2>
+                <h2 class="pj_title">The<br /> project:</h2>
                 <div class="pj_wrap">
                     <article class="pj_item s1">
                         <span class="num">
@@ -62,7 +82,7 @@
                         <div class="btn">
                             <a href="#">프로세서보기</a>
                             <a href="#">figma storyboard</a>
-                            <a href="#"><img src="./src/imgs/arrow.png"></a>
+                            <a href="#" class="arrow"><img src="./src/imgs/arrow.png"></a>
                         </div>
                         <div class="info">
                             <span>site coding</span>
@@ -83,7 +103,7 @@
                         <div class="btn">
                             <a href="#">프로세서보기</a>
                             <a href="#">figma storyboard</a>
-                            <a href="#"><img src="./src/imgs/arrow.png"></a>
+                            <a href="#" class="arrow"><img src="./src/imgs/arrow.png"></a>
                         </div>
                         <div class="info">
                             <span>app coding</span>
@@ -103,7 +123,7 @@
                         <h3>심볼로고 및 브랜딩</h3>
                         <div class="btn">
                             <a href="#">프로세서보기</a>
-                            <a href="#"><img src="./src/imgs/arrow.png"></a>
+                            <a href="#" class="arrow"><img src="./src/imgs/arrow.png"></a>
                         </div>
                         <div class="info">
                             <span>site coding</span>
@@ -116,7 +136,7 @@
         </section>
         <section id="Work" class="item">
             <h2 class="work_title">publishing</h2>
-        <div class="i_am">
+            <div class="i_am">
                 <ul>
                     <li class="flow_list">
                         <div class="splide" id="splide">
@@ -124,83 +144,56 @@
                                 <ul class="splide__list">
                                     <li class="splide__slide">
                                         <article class="work_item w1">
-                                            <span class="num">01.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/watcha.png" alt=""></a>
-                                            <h3 class="title">watcha</h3>
-                                            <p class="desc">Css Transform</p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/watcha.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w2">
-                                            <span class="num">02.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/mugo.png" alt=""></a>
-                                            <h3 class="title">mugo</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/mugo.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w3">
-                                            <span class="num">03.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/woodam.png" alt=""></a>
-                                            <h3 class="title">WODAMLIGHTING</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/woodam.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w4">
-                                            <span class="num">04.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/hakit.png" alt=""></a>
-                                            <h3 class="title">hakit</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/hakit.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w5">
-                                            <span class="num">05.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/beanpole.png" alt=""></a>
-                                            <h3 class="title">beanpole</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/beanpole.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w6">
-                                            <span class="num">06.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/vans.png" alt=""></a>
-                                            <h3 class="title">vans</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/vans.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w7">
-                                            <span class="num">07.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/10x10.png" alt=""></a>
-                                            <h3 class="title">10x10</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/10x10.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w8">
-                                            <span class="num">08.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/sulwhasoo.png" alt=""></a>
-                                            <h3 class="title">sulwhasoo</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/sulwhasoo.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                     <li class="splide__slide">
                                         <article class="work_item w9">
-                                            <span class="num">09.</span>
-                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/clio.png" alt=""></a>
-                                            <h3 class="title">clio</h3>
-                                            <p class="desc"></p>
-                                            <a href="#" target="_blank" class="site">사이트보기</a>
+                                            <a href="#" target="_blank" class="img"><img src="./src/imgs/clio.png"
+                                                    alt=""></a>
                                         </article>
                                     </li>
                                 </ul>
@@ -215,36 +208,59 @@
                 <h2 class="graph_title">graphics</h2>
                 <article class="stage">
                     <div class="inner">
-                        <ul class="flex">
-                            <li>
-                                <p class="img_box">
-                                    <img src="./src/imgs/구달(수정본).jpg" alt="">
-                                </p>
-                            </li>
-                            <li>
-                                <p class="img_box">
-                                    <img src="./src/imgs/레드불(수정).jpg" alt="">
-                                </p>
-                            </li>
-                            <li>
-                                <p class="img_box">
-                                    <img src="./src/imgs/플리마켓포스터(수정2).jpg" alt="">
-                                </p>
-                            </li>
-                            <li>
-                                <p class="img_box">
-                                    <img src="./src/imgs/예술창작포스터(수정).jpg" alt="">
-                                </p>
-                            </li>
-                            <li>
-                                <p class="img_box i5">
-                                    <img src="./src/imgs/그래픽7(썬키스트).jpg" alt="">
-                                </p>
-                            </li>
-                        </ul>
                         <div class="img_text">
                             <p class="title1">사람들의 이목을 집중시키는 디자인을 만듭니다.</p>
-                            <p class="title2">창의적이고 독창적인,</p>
+                        </div>
+                        <div class="img-wrap">
+                            <div class="img-inner">
+                                <ul class="poster flex">
+                                    <li class="pt pt-pd">
+                                        <p>poster</p>
+                                    </li>
+                                    <li class="p1">
+                                        <p class="img_box">
+                                            <a href="./src/imgs/플리마켓포스터(수정2).jpg" data-fancybox="gallery"><img
+                                                    src="./src/imgs/플리마켓썸네일.jpg" alt=""></a>
+                                        </p>
+                                    </li>
+                                    <li class="p2">
+                                        <p class="img_box">
+                                            <a href="./src/imgs/예술창작포스터(수정).jpg" data-fancybox="gallery"><img
+                                                    src="./src/imgs/2024예술창작썸네일.jpg" alt=""></a>
+                                        </p>
+                                    </li>
+                                </ul>
+                                <ul class="ad flex">
+                                    <li class="ad1">
+                                        <p class="img_box">
+                                            <a href="./src/imgs/구달.jpg" data-fancybox="gallery"><img
+                                                    src="./src/imgs/구달썸네일.jpg" alt=""></a>
+                                        </p>
+                                    </li>
+                                    <li class="ad2">
+                                        <p class="img_box">
+                                            <a href="./src/imgs/레드불(수정).jpg" data-fancybox="gallery"><img
+                                                    src="./src/imgs/레드불썸네일.jpg" alt=""></a>
+                                        </p>
+                                    </li>
+                                    <li class="pt pt-a">
+                                        <p>graphic</p>
+                                    </li>
+                                </ul>
+                                <ul class="detail flex">
+                                    <li class="detail1">
+                                        <p class="img_box"><a href="./src/imgs/travellog.jpg"
+                                                data-fancybox="gallery"><img src="./src/imgs/트레블로그 썸네일.jpg"></a></p>
+                                    </li>
+                                    <li class="detail2">
+                                        <p class="img_box"><a href="./src/imgs/winsaf.jpg" data-fancybox="gallery"><img
+                                                    src="./src/imgs/윈세프썸네일.jpg"></a></p>
+                                    </li>
+                                    <li class="pt pt-pd">
+                                        <p>detail page</p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </article>
@@ -254,13 +270,32 @@
             <div class="about_inner">
                 <h2 class="about_title">About Me</h2>
                 <div class="about_desc">
-                    <div class="about_item intro"><img src="./src/imgs/clouddd.png"></div>
-                    <div class="about_item skill"><img src="./src/imgs/캐리어2.png"></div>
-                    <div class="about_item license"><img src="./src/imgs/icon2.png"></div>
-                    <div class="about_item career"><img src="./src/imgs/icon1.png"></div>
+                    <div class="explain">
+                       <div class="about_item me">
+                        <h3>안녕하세요 저는 김가현입니다</h3>
+                        <p>1998.04.29</p>
+                        <p></p>
+                       </div>
+                    <div class="about_item license">
+                        <ul>
+                            <li><img src="./src/imgs/html.png">
+                            <p>94%</p>
+                            </li>
+                            <li><img src="./src/imgs/css.png">
+                                <p>92%</p></li>
+                            <li><img src="./src/imgs/ps.png">
+                                <p>97%</p></li>
+                            <li><img src="./src/imgs/ai.png">
+                                <p>96%</p></li>
+                            <li><img src="./src/imgs/figma.png">
+                                <p>95%</p></li>
+                        </ul>
+                    </div>
+                    <div class="about_item career">
+                    </div>
+                   </div>
                 </div>
             </div>
-            <div class="me"><img src="./src/imgs/나2 1.png"></div>
         </section>
 
     </main>
