--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-    <!-- <div class="preloader-c-area">
+    <div class="preloader-c-area">
         <div class="preloader-c c-1"></div>
         <div class="preloader-c c-2"></div>
         <div class="preloader-c c-3"></div>
         <div class="preloader-c c-4"></div>
-    </div> -->
+    </div>
     <header id="header" role="banner">
         <div class="header_inner">
             <div class="header_logo"><a href="#"><img src="./src/imgs/mylogo.png">MY Port</a></div>
