--- a/index.html
+++ b/index.html
@@ -212,9 +212,18 @@
                 <h2 class="graph_title">graphics</h2>
                 <article class="stage">
                     <div class="inner">
-                        <!-- <div class="img_text">
+                        <div class="img_text">
                             <p class="title1">사람들의 이목을 집중시키는 디자인을 만듭니다.</p>
-                        </div> -->
+                        </div>
+                        <div class="img-text">
+                            <p class="ex ex1">poster design</p>
+                        </div>
+                        <div class="img-text">
+                            <p class="ex ex2">graphic design</p>
+                        </div>
+                        <div class="img-text">
+                            <p class="ex ex3">detail page design</p>
+                        </div>
                         <div class="img-wrap">
                             <div class="img-inner">
                                 <ul class="column">
@@ -269,33 +278,31 @@
             <h2 class="about_title">about me</h2>
             <div class="about_inner">
                 <article class="about-tx at1">
-                    <div class="about1-wrap">
-                        <div class="item_img img"><img src="./src/imgs/apicon.png"></div>
-                        <div class="item_text text t1">
-                            Port란 "항구"로서
+                    <div class="about-wrap wrap1">
+                        <div class="item_img img">
+                            <ul class="symbol flex">
+                                <li class="se1"><img src="./src/imgs/apicon.png"></li>
+                                <li class="se2"><img src="./src/imgs/clouddd.png"></li>
+                                <li class="se3"><img src="./src/imgs/bluecursor.png"></li>
+                            </ul>
                         </div>
-                        <div class="item_text text t2">
-                            출발,경유,도착 지점의
+                        <div class="skills">
+                            <h3>skills</h3>
+                            <ul class="skill-list flex">
+                                <li class="s-list1"><img src="./src/imgs/html.png"></li>
+                                <li class="s-list2"><img src="./src/imgs/css.png"></li>
+                                <li class="s-list3"><img src="./src/imgs/ps.png"></li>
+                                <li class="s-list4"><img src="./src/imgs/ai.png"></li>
+                                <li class="s-list5"><img src="./src/imgs/figma.png"></li>
+                                <li class="s-list6"><img src="./src/imgs/java.png"></li>
+                                <li class="s-list7"><img src="./src/imgs/jquery.png"></li>
+                            </ul>
                         </div>
-                        <div class="item_text text t3">
-                            의미를 담고 있습니다.
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </section>
-        <section id="About2">
-            <div class="about_inner">
-                <article class="about-tx at2">
-                    <div class="about2-wrap">
-                        <div class="item_text text t4">
-                            <p>나만의 항구를 만들어내어</p>
-                        </div>
-                        <div class="item_text text t5">
-                            <p>창의적이고 독창적인</p>
-                        </div>
-                        <div class="item_text text t6">
-                            <p>UIUX디자이너가 되겠습니다.</p>
+                        <div class="license">
+                            <ul>
+                                <li>GTQ그래픽기술자격1급</li>
+                                <li>GTQ일러스트1급</li>
+                            </ul>
                         </div>
                     </div>
                 </article>
@@ -303,44 +310,47 @@
         </section>
         <section id="AboutMe">
             <div class="about-inner">
-                <div class="about-wrap wrap1">
-                     <div class="aboutme-sticky"><img src="./src/imgs/하늘.png"></div>
-                    <article class="about-item a1">
-                        <div class="ability">
-                        </div>
-                        <div class="license">
-                            <div class="item_text">GTQ 그래픽기술자격 1급</div>
-                            <div class="item_text">GTQ 일러스트 1급</div>
-                        </div>
-                        <div class="item_img me"><img src="./src/imgs/나2 1.png"></div>
-                    </article>
-                    <article class="about-item a2">
-                        <div class="about-wrap wrap2">
-                            <ul class="item_intro">
-                                <li class="intro_text">
-                                    <p>what about me</p>
-                                </li>
-                                <li class="intro1"><img src="./src/imgs/circleline.png"></li>
-                            </ul>
-                            <div class="intro_more"><img src="./src/imgs/more-icon.png"></div>
-                            <div class="ex-wrap">
-                                <ul class="item_explain">
-                                    <li class="age">
-                                        <p>1998.04.29</p>
-                                    </li>
-                                    <li class="career">
-                                        <p>닥터마틴 근무</p>
-                                    </li>
-                                    <li class="shortex">
-                                        <p>안녕하세요 저는 김가현입니다.</p>
-                                    </li>
-                                    <li class="contact">
-                                        <p>010-2XXX-3722</p>
-                                    </li>
-                                </ul>
+                <div class="about-wrap wrap2">
+                    <div class="aboutme-wrap wr1">
+                        <article class="bg1"></article>
+                        <article class="columns">
+                            <div class="about-item a1">
+                                <div class="item_text text t1">
+                                    김가현
+                                </div>
+                                <div class="item_text text t2">
+                                    1998.04.29
+                                </div>
+                                <div class="item_text text t3">
+                                    울산성광여자고등학교 졸업
+                                </div>
+                                <div class="item_text text t4">
+                                    부산외대 중국학부 중퇴
+                                </div>
+                                <div class="item_text text t5">
+                                    학점은행제 경영학과 전문학사과정 수료
+                                </div>
+                                <div class="item_text text t6">
+                                    MBC아카데미 UIUX웹퍼블리셔 프론트엔드 과정 수료
+                                </div>
                             </div>
-                        </div>
-                    </article>
+                            <div class="about-item a2">
+                                <div class="about-wrapper">
+                                    <ul class="item_intro">
+                                        <li class="intro_text">
+                                            <p>안녕하세요.<br/>신입 UIUX디자이너 김가현입니다.
+                                                <br/>새로운 비상을 위해 
+                                                <br/>끊임없이 공부하는 모습
+                                                보여드리겠습니다.
+                                            </p>
+                                        </li>
+                                        <li class="intro1"><img src="./src/imgs/circleline.png"></li>
+                                    </ul>
+                                </div>
+                                <!-- <div class="intro_more"><img src="./src/imgs/more-icon.png"></div> -->
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
         </section>
