--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="preloader-c-area">
+    <!-- <div class="preloader-c-area">
         <div class="intro-text">Into the PORT</div>
         <div class="intro_line"></div>
         <div id="loading-number">0</div>
@@ -21,7 +21,7 @@
         <div class="preloader-c c-2"></div>
         <div class="preloader-c c-3"></div>
         <div class="preloader-c c-4"></div>
-    </div>
+    </div> -->
     <header id="header" role="banner">
         <div class="header_inner">
             <div class="header_logo"><a href="./index.html"><img src="./src/imgs/mylogo.png">MY Port</a></div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <h1>
-                    <a href="" class="typewrite" data-period="2000" data-type='[ "welcome to my port" ]'>
+                    <a href="" class="typewrite" data-period="2000" data-type='[ "Let’s Travel with me" ]'>
                         <span class="wrap"></span>
                     </a>
                 </h1>
@@ -73,7 +73,7 @@
         </section>
         <section id="Project" class="item">
             <div class="pj_inner">
-                <h2 class="pj_title">The<br /> project:</h2>
+                <h2 class="pj_title">The project:</h2>
                 <div class="pj_wrap">
                     <article class="pj_item s1">
                         <span class="num">
@@ -110,7 +110,7 @@
                             <a href="#" class="arrow"><img src="./src/imgs/arrow.png"></a>
                         </div>
                         <div class="info">
-                            <span>app coding</span>
+
                             <span>production period:02.16~04.23</span>
                             <span>use stack:html,css,jquery,vanila js</span>
                         </div>
@@ -278,79 +278,100 @@
             <h2 class="about_title">about me</h2>
             <div class="about_inner">
                 <article class="about-tx at1">
-                    <div class="about-wrap wrap1">
+                    <div class="about-wrap1">
                         <div class="item_img img">
-                            <ul class="symbol flex">
-                                <li class="se1"><img src="./src/imgs/apicon.png"></li>
-                                <li class="se2"><img src="./src/imgs/clouddd.png"></li>
-                                <li class="se3"><img src="./src/imgs/bluecursor.png"></li>
+                            <ul class="symbol">
+                                <li class="se1"><img src="./src/imgs/clouddd.png"></li>
+                                <li class="se2"><img src="./src/imgs/apicon.png"></li>
                             </ul>
                         </div>
-                        <div class="skills">
-                            <h3>skills</h3>
-                            <ul class="skill-list flex">
-                                <li class="s-list1"><img src="./src/imgs/html.png"></li>
-                                <li class="s-list2"><img src="./src/imgs/css.png"></li>
-                                <li class="s-list3"><img src="./src/imgs/ps.png"></li>
-                                <li class="s-list4"><img src="./src/imgs/ai.png"></li>
-                                <li class="s-list5"><img src="./src/imgs/figma.png"></li>
-                                <li class="s-list6"><img src="./src/imgs/java.png"></li>
-                                <li class="s-list7"><img src="./src/imgs/jquery.png"></li>
-                            </ul>
-                        </div>
-                        <div class="license">
-                            <ul>
-                                <li>GTQ그래픽기술자격1급</li>
-                                <li>GTQ일러스트1급</li>
-                            </ul>
+                        <div class="my-wrap">
+                            <div class="skills">
+                                <h3>skills</h3>
+                                <ul class="skill-list flex">
+                                    <li class="s-list1"><img src="./src/imgs/ps.png"></li>
+                                    <li class="s-list2"><img src="./src/imgs/ai.png"></li>
+                                    <li class="s-list3"><img src="./src/imgs/figma.png"></li>
+                                    <li class="s-list4"><img src="./src/imgs/html.png"></li>
+                                    <li class="s-list5"><img src="./src/imgs/css.png"></li>
+                                    <li class="s-list6"><img src="./src/imgs/java.png"></li>
+                                    <li class="s-list7"><img src="./src/imgs/jquery.png"></li>
+                                </ul>
+                            </div>
+                            <div class="license">
+                                <h3>certificate</h3>
+                                <ul class="inform">
+                                    <li>GTQ그래픽기술자격1급</li>
+                                    <li>GTQ일러스트1급</li>
+                                </ul>
+                            </div>
+                            <div class="education">
+                                <h3>education</h3>
+                                <ul class="inform">
+                                    <li>
+                                        울산성광여자고등학교 졸업
+                                    </li>
+                                    <li>
+                                        부산외대 중국학부 중퇴
+                                    </li>
+                                    <li>
+                                        학점은행제 경영학과 전문학사과정 수료
+                                    </li>
+                                    <li>
+                                        MBC아카데미 UIUX웹퍼블리셔 프론트엔드 과정 수료
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </article>
             </div>
         </section>
-        <section id="AboutMe">
-            <div class="about-inner">
-                <div class="about-wrap wrap2">
-                    <div class="aboutme-wrap wr1">
-                        <article class="bg1"></article>
-                        <article class="columns">
-                            <div class="about-item a1">
-                                <div class="item_text text t1">
-                                    김가현
-                                </div>
-                                <div class="item_text text t2">
-                                    1998.04.29
-                                </div>
-                                <div class="item_text text t3">
-                                    울산성광여자고등학교 졸업
-                                </div>
-                                <div class="item_text text t4">
-                                    부산외대 중국학부 중퇴
-                                </div>
-                                <div class="item_text text t5">
-                                    학점은행제 경영학과 전문학사과정 수료
-                                </div>
-                                <div class="item_text text t6">
-                                    MBC아카데미 UIUX웹퍼블리셔 프론트엔드 과정 수료
-                                </div>
+        <section class="AboutMe">
+            <div class="about-wrap2">
+                <div class="aboutme-wrap wr1">
+                    <article class="bg1"></article>
+                    <article class="columns">
+                        <div class="about-item a1">
+                            <h4>i am</h4>
+                            <div class="introduce">
+                                신입 UIUX디자이너 김가현입니다.
+                                저는 수년간 서비스직을 하면서
+                                여러사람들과 대화하고 협업하는 법을
+                                배우며 성장했습니다.
+                                또한 다양한 사람들을 접하며,
+                                새로운 생각과 다양한 관점들을 겪을 수 있었습니다.
+                                이러한 경험들로 다양한 것들을 받아들일 수 있습니다.
+                                다양한 것들을 받아들이고 더 많은 가능성을 펼칠 수 있는
+                                그런 사람이 되고 싶습니다.
+                                새로운 비상을 위해
+                                끊임없이 공부하는 모습
+                                보여드리겠습니다.
+
                             </div>
-                            <div class="about-item a2">
-                                <div class="about-wrapper">
-                                    <ul class="item_intro">
-                                        <li class="intro_text">
-                                            <p>안녕하세요.<br/>신입 UIUX디자이너 김가현입니다.
-                                                <br/>새로운 비상을 위해 
-                                                <br/>끊임없이 공부하는 모습
-                                                보여드리겠습니다.
-                                            </p>
-                                        </li>
-                                        <li class="intro1"><img src="./src/imgs/circleline.png"></li>
-                                    </ul>
-                                </div>
-                                <!-- <div class="intro_more"><img src="./src/imgs/more-icon.png"></div> -->
+                        </div>
+                        <div class="about-item a2">
+                            <h4>strength</h4>
+                            <div class="introduce">
+                             <ul class="strength flex">
+                                <li><figure>성장</figure></li>
+                                <li><figure>창의력</figure></li>
+                                <li><figure>의사소통</figure></li>
+                                <li><figure>자기주도</figure></li>
+                             </ul>
                             </div>
-                        </article>
-                    </div>
+                        </div>
+                        <div class="about-item a3">
+                            <h4>contact</h4>
+                            <div class="introduce">
+                              <ul>
+                                <li><img src="./src/imgs/circleline.png"></li>
+                                <li><img src="./src/imgs/more-icon.png"></li>
+                              </ul>
+                              <p></p>
+                            </div>
+                        </div>
+                    </article>
                 </div>
             </div>
         </section>
