--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <!-- <div class="preloader-c-area">
+    <div class="preloader-c-area">
         <div class="intro-text">Into the PORT</div>
         <div class="intro_line"></div>
         <div id="loading-number">0</div>
@@ -21,7 +21,7 @@
         <div class="preloader-c c-2"></div>
         <div class="preloader-c c-3"></div>
         <div class="preloader-c c-4"></div>
-    </div> -->
+    </div>
     <header id="header" role="banner">
         <div class="header_inner">
             <div class="header_logo"><a href="./index.html"><img src="./src/imgs/mylogo.png">MY Port</a></div>
